--- a/register.html
+++ b/register.html
@@ -1,95 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Campus CookBook - Login</title>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        background-color: #fff3e6; /* light peach color */
-        background-image: url('meal1.jpg'), url('meal2.jpg'), url('meal3.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-    .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.6); /* semi-transparent white overlay */
-    }
-    .main-container {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-    }
-    .login-container {
-        width: 300px;
-        margin: 0 auto;
-    }
-    .login-container h2 {
-        margin-bottom: 20px;
-        text-align: center;
-    }
-    .form-group {
-        margin-bottom: 20px;
-    }
-    .form-group input {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-    .form-group button {
-        width: 100%;
-        padding: 10px;
-        background-color: #ff6f61; /* coral color */
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    .form-group button:hover {
-        background-color: #e2594b; /* darker coral color on hover */
-    }
-    .error-message {
-        color: red;
-        margin-top: 10px;
-        text-align: center;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campus CookBook - Register</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="overlay"></div>
-
-<div class="main-container">
-    <div class="login-container">
-        <h2>Register Here!</h2>
-        <div class="form-group">
-            <input type="email" id="email" placeholder="Email" required>
+    <header>
+        <div class="logo">
+            <span style="font-family: 'Pacifico', cursive; font-size: 36px;">The Campus CookBook</span>
         </div>
-        <div class="form-group">
-            <input type="password" id="password" placeholder="Password" required>
+        <div class="search-bar">
+            <input type="text" id="searchInput" placeholder="Search...">
+            <button onclick="searchRecipes()">Search</button>
         </div>
-        <div class="form-group">
-            <button onclick="login()">Register</button>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Recipes</a></li>
+                <li><a href="#footer">About Us</a></li>
+            </ul>
+        </nav>
+        <div class="hamburger-menu" onclick="toggleMenu()">
+            <div class="hamburger-icon"></div>
+            <div class="menu-items" id="menuItems" style="display: none;">
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
+            </div>
         </div>
-        <div class="error-message" id="error-message"></div>
+    </header>
+    <div class="overlay"></div>
+    <div class="main-container">
+        <div class="login-container">
+            <h2>Register for Campus CookBook</h2>
+            <form id="registerForm">
+                <div class="form-group">
+                    <input type="text" id="firstName" placeholder="First Name" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" id="lastName" placeholder="Last Name" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" id="username" placeholder="Username" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" id="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <input type="password" id="password" placeholder="Password" required>
+                </div>
+                <div class="form-group">
+                    <input type="password" id="confirmPassword" placeholder="Re-enter Password" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Register</button>
+                </div>
+                <div class="error-message" id="error-message"></div>
+            </form>
+        </div>
+        
     </div>
-</div>
-
-<script src="script.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
