--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="hamburger-menu" onclick="toggleMenu()">
             <div class="hamburger-icon"></div>
             <div class="menu-items" id="menuItems" style="display: none;">
-                <a href="login.html">Login</a>
-                <a href="register.html">Register</a>
+                <a href="login.php">Login</a>
+                <a href="register.php">Register</a>
             </div>
         </div>
     </header>
