--- a/register.html
+++ b/register.html
@@ -34,27 +34,27 @@
     <div class="main-container">
         <div class="login-container">
             <h2>Register for Campus CookBook</h2>
-            <form id="registerForm">
+            <form id="registerForm" action="register.php" method="post"> <!-- Updated action to register.php and method to post -->
                 <div class="form-group">
-                    <input type="text" id="firstName" placeholder="First Name" required>
+                    <input type="text" name="firstName" id="firstName" placeholder="First Name" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" id="lastName" placeholder="Last Name" required>
+                    <input type="text" name="lastName" id="lastName" placeholder="Last Name" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" id="username" placeholder="Username" required>
+                    <input type="text" name="username" id="username" placeholder="Username" required>
                 </div>
                 <div class="form-group">
-                    <input type="email" id="email" placeholder="Email" required>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
                 </div>
                 <div class="form-group">
-                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="password" name="password" id="password" placeholder="Password" required>
                 </div>
                 <div class="form-group">
-                    <input type="password" id="confirmPassword" placeholder="Re-enter Password" required>
+                    <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Re-enter Password" required>
                 </div>
                 <div class="form-group">
-                    <button type="submit">Register</button>
+                    <button type="submit" name="register">Register</button>
                 </div>
                 <div class="error-message" id="error-message"></div>
             </form>
