--- a/login.html
+++ b/login.html
@@ -117,16 +117,18 @@
     <div class="main-container">
         <div class="login-container">
             <h2>Login to Campus CookBook</h2>
-            <div class="form-group">
-                <input type="email" id="email" placeholder="Email" required>
-            </div>
-            <div class="form-group">
-                <input type="password" id="password" placeholder="Password" required>
-            </div>
-            <div class="form-group">
-                <button onclick="login()">Login</button>
-            </div>
-            <div class="error-message" id="error-message"></div>
+            <form id="loginForm" action="login.php" method="post"> <!-- Updated action to login.php and method to post -->
+                <div class="form-group">
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" id="password" placeholder="Password" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit" name="login">Login</button>
+                </div>
+                <div class="error-message" id="error-message"></div>
+            </form>
         </div>
     </div>
     <script src="script.js"></script>
