--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Recipes</a></li>
                 <li><a href="#footer">About Us</a></li>
+                <li><a href="recipe-add.html">Add Your Recipe</a></li> <!-- Added link to recipe-add.html -->
 
             </ul>
         </nav>
