--- a/recipe-add.html
+++ b/recipe-add.html
@@ -71,14 +71,8 @@
     </header>
     <main>
         <div class="recipe-form">
-            <h1>Add Your Recipe</h1>
-            <form action="submit_recipe.php" method="post" enctype="multipart/form-data">
-                <input type="text" name="title" placeholder="Recipe Title" required>
-                <textarea name="ingredients" placeholder="Ingredients" rows="4" required></textarea>
-                <textarea name="instructions" placeholder="Instructions" rows="4" required></textarea>
-                <input type="file" name="image" accept="image/*">
-                <button type="submit">Submit Recipe</button>
-            </form>
+            <h1>Thank you for adding a recipe!</h1>
+            <p><a href="index.html">Return to Homepage</a></p>
         </div>
     </main>
     <footer>
