--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <div class="logo">
             <span style="font-family: 'Pacifico', cursive; font-size: 36px;">The Campus CookBook</span>
         </div>
-        <div class="search-bar">
+        <!--div class="search-bar">
             <input type="text" id="searchInput" placeholder="Search...">
             <button onclick="searchRecipes()">Search</button>
-        </div>
+    </div>
+        -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
