--- a/scrambled-eggs-details.html
+++ b/scrambled-eggs-details.html
@@ -95,6 +95,21 @@
         .review-form input[type="submit"]:hover {
             background-color: #45a049;
         }
+        
+        .leave-review-button {
+            font-weight: bold;
+            font-size: 18px;
+            padding: 10px 20px; /* Adjust padding as needed */
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease; /* Smooth transition */
+        }
+        .leave-review-button:hover {
+            background-color: #45a049; /* Darker shade on hover */
+        }
     </style>
 </head>
 <body>
@@ -143,7 +158,7 @@
     </main>
 
             <!-- "Leave a Review" button -->
-            <button onclick="openReviewModal()">Leave a Review</button>
+            <button class="leave-review-button" onclick="openReviewModal()">Leave a Review</button>
 
             <!-- Review section -->
             <div id="reviewSection">
@@ -158,13 +173,18 @@
                         <h2>Leave a Review</h2>
                         <form id="reviewForm" onsubmit="submitReview(event)">
                             <input type="text" id="comment" name="comment" placeholder="Write your comment" required><br>
-                            <input type="number" id="rating" name="rating" min="1" max="5" placeholder="Rating (1-5)" required><br>
+                            <!-- Use radio buttons for rating with literal stars -->
+                            <input type="radio" id="star5" name="rating" value="5" required/><label for="star5" title="5 stars">&#9733;</label>
+                            <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="4 stars">&#9733;</label>
+                            <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="3 stars">&#9733;</label>
+                            <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="2 stars">&#9733;</label>
+                            <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="1 star">&#9733;</label><br>
                             <input type="submit" value="Submit">
                         </form>
                     </div>
                 </div>
             </div>
-        </section>
+                    </section>
     </main>
 
     <footer id="footer">
