--- a/peanut-butter-banana-toast-details.html
+++ b/peanut-butter-banana-toast-details.html
@@ -71,6 +71,32 @@
             text-decoration: none;
             cursor: pointer;
         }
+        .review-form {
+            text-align: center;
+        }
+        .review-form input[type="text"],
+        .review-form textarea {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .review-form input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .review-form input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
 
         /* Styles for the "Leave a Review" button */
         .leave-review-button {
