--- a/greek-yogurt-parfait-details.html
+++ b/greek-yogurt-parfait-details.html
@@ -39,7 +39,98 @@
              margin-top: 40px; /* Adjust this value as needed to increase the gap */
         }
 
-    </style>
+      
+        .modal {
+            display: none; /* Hide the modal by default */
+            position: fixed;
+            z-index: 1; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto; /* Enable scrolling if needed */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto; /* 15% from the top and centered */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Could be more or less, depending on screen size */
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .review-form {
+            text-align: center;
+        }
+        .review-form input[type="text"],
+        .review-form textarea {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .review-form input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .review-form input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+        /* Styles for the "Leave a Review" button */
+        .leave-review-button {
+            font-weight: bold;
+            font-size: 18px;
+            padding: 10px 20px; /* Adjust padding as needed */
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease; /* Smooth transition */
+        }
+        .leave-review-button:hover {
+            background-color: #45a049; /* Darker shade on hover */
+        }
+
+        /* Styles for the star rating */
+        .stars {
+            unicode-bidi: bidi-override;
+            direction: rtl;
+        }
+        .stars input[type="radio"] {
+            display: none;
+        }
+        .stars label {
+            font-size: 24px;
+            cursor: pointer;
+        }
+        .stars label:before {
+            content: '\2606'; /* Empty star */
+            margin-right: 5px;
+        }
+        .stars input[type="radio"]:checked ~ label:before {
+            content: '\2605'; /* Filled star */
+        }
+            </style>>
 </head>
 <body>
     <header>
@@ -85,9 +176,92 @@
             </ol>
         </section>
     </main>
-    <footer>
-        <!-- Your footer here -->
+    <!-- "Leave a Review" button -->
+            <button class="leave-review-button" onclick="openReviewModal()">Leave a Review</button>
+
+            <!-- Review section -->
+            <div id="reviewSection">
+                <!-- Reviews will be displayed here -->
+            </div>
+
+            <!-- Modal for review form -->
+            <div id="reviewModal" class="modal">
+                <div class="modal-content">
+                    <span class="close" onclick="closeReviewModal()">&times;</span>
+                    <div class="review-form">
+                        <h2>Leave a Review</h2>
+                        <form id="reviewForm" onsubmit="submitReview(event)">
+                            <input type="text" id="comment" name="comment" placeholder="Write your comment" required><br>
+                            <!-- Use radio buttons for rating with empty and filled stars -->
+                            <div class="stars">
+                                <input type="radio" id="star5" name="rating" value="5" required/><label for="star5" title="5 stars"></label>
+                                <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="4 stars"></label>
+                                <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="3 stars"></label>
+                                <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="2 stars"></label>
+                                <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="1 star"></label>
+                            </div>
+                            <input type="submit" value="Submit">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer id="footer">
+        <div class="about-us">
+            <h2>Welcome to The Campus CookBook!</h2>
+            <p>Our mission is to provide college students living away from home with easy, quick, and healthy recipes. Say goodbye to dining out every night and hello to delicious homemade meals that fit your busy student lifestyle.</p>
+        </div>
+        <div class="contact-info">
+            <h2>Contact Us</h2>
+            <p>Email: contact@thecampuscookbook.com</p>
+            <p>Phone: 123-456-7890</p>
+        </div>
+        <div class="social-media">
+            <h2>Follow Us</h2>
+            <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
+        </div>
     </footer>
-    <script src="script.js"></script>
+
+<script>
+    // Function to open the review modal
+    function openReviewModal() {
+        document.getElementById("reviewModal").style.display = "block";
+    }
+
+    // Function to close the review modal
+    function closeReviewModal() {
+        document.getElementById("reviewModal").style.display = "none";
+    }
+
+    // Function to submit the review form
+    function submitReview(event) {
+        event.preventDefault(); // Prevent form submission
+        var comment = document.getElementById("comment").value;
+        var rating = document.querySelector('input[name="rating"]:checked').value;
+
+        // You can handle the submission here, for example, send data to a server via AJAX
+
+        // For demonstration, let's just display the review below the button
+        var reviewSection = document.getElementById("reviewSection");
+        var reviewDiv = document.createElement("div");
+        reviewDiv.innerHTML = "<strong>Rating:</strong> " + getStars(rating) + "<br><strong>Comment:</strong> " + comment + "<hr>";
+        reviewSection.appendChild(reviewDiv);
+
+        // Close the modal after submission
+        closeReviewModal();
+    }
+
+    // Function to generate filled stars based on the rating
+    function getStars(rating) {
+        var stars = "";
+        for (var i = 0; i < rating; i++) {
+            stars += "&#9733;"; // Filled star
+        }
+        return stars;
+    }
+</script>
+
 </body>
 </html>
