--- a/recipe-add.html
+++ b/recipe-add.html
@@ -43,6 +43,15 @@
         .recipe-form button:hover {
             background-color: #d1768f;
         }
+
+        .recipe-form label {
+            font-weight: bold; /* Make labels bold */
+            display: block; /* Ensure each label is on a new line */
+            margin-top: 10px; /* Add some space above each label */
+        }
+        .recipe-form textarea {
+            height: 100px; /* Increase height of textarea */
+        }
     </style>
 </head>
 <body>
@@ -71,12 +80,39 @@
     </header>
     <main>
         <div class="recipe-form">
-            <h1>Thank you for adding a recipe!</h1>
+            <h1>Add Your Recipe</h1>
+            <form id="recipeForm" enctype="multipart/form-data">
+                <label for="recipeName">Recipe Name:</label>
+                <input type="text" id="recipeName" name="recipeName" required>
+
+                <label for="recipeImage">Recipe Image (JPG):</label>
+                <input type="file" id="recipeImage" name="recipeImage" accept=".jpg" required>
+
+                <label for="ingredients">Ingredients:</label>
+                <textarea id="ingredients" name="ingredients" required></textarea>
+
+                <label for="instructions">Instructions:</label>
+                <textarea id="instructions" name="instructions" required></textarea>
+
+                <button type="submit">Submit</button>
+            </form>
             <p><a href="index.html">Return to Homepage</a></p>
         </div>
     </main>
-    <footer>
-        <!-- Your footer here -->
+   <footer id="footer">
+        <div class="about-us">
+            <h2>Welcome to The Campus CookBook!</h2>
+            <p>Our mission is to provide college students living away from home with easy, quick, and healthy recipes. Say goodbye to dining out every night and hello to delicious homemade meals that fit your busy student lifestyle.</p>
+        </div>
+        <div class="contact-info">
+            <h2>Contact Us</h2>
+            <p>Email: contact@thecampuscookbook.com</p>
+            <p>Phone: 123-456-7890</p>
+        </div>
+        <div class="social-media">
+            <h2>Follow Us</h2>
+            <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
