--- a/recipe-add.html
+++ b/recipe-add.html
@@ -81,7 +81,7 @@
     <main>
         <div class="recipe-form">
             <h1>Add Your Recipe</h1>
-            <form id="recipeForm" enctype="multipart/form-data">
+            <form id="recipeForm" enctype="multipart/form-data" onsubmit="submitForm(event)">
                 <label for="recipeName">Recipe Name:</label>
                 <input type="text" id="recipeName" name="recipeName" required>
 
@@ -115,5 +115,17 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script>
+        function submitForm(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            // Show alert message
+            alert("Thank you for adding your recipe!");
+
+            // Redirect to index.html after a short delay (for the alert to be visible)
+            setTimeout(function() {
+                window.location.href = "index.html";
+            }, 1000); // 1000 milliseconds = 1 second
+        }
 </body>
 </html>
