--- a/recipe-add.html
+++ b/recipe-add.html
@@ -94,7 +94,7 @@
                 <label for="instructions">Instructions:</label>
                 <textarea id="instructions" name="instructions" required></textarea>
 
-                <button type="submit">Submit</button>
+                <button type="button" onclick="submitForm()">Submit</button>
             </form>
             <p><a href="index.html">Return to Homepage</a></p>
         </div>
