--- a/greek-yogurt-parfait-details.html
+++ b/greek-yogurt-parfait-details.html
@@ -39,8 +39,7 @@
              margin-top: 40px; /* Adjust this value as needed to increase the gap */
         }
 
-      
-        .modal {
+      .modal {
             display: none; /* Hide the modal by default */
             position: fixed;
             z-index: 1; /* Sit on top */
@@ -130,7 +129,7 @@
         .stars input[type="radio"]:checked ~ label:before {
             content: '\2605'; /* Filled star */
         }
-            </style>>
+            </style>
 </head>
 <body>
     <header>
@@ -176,7 +175,7 @@
             </ol>
         </section>
     </main>
-    <!-- "Leave a Review" button -->
+     <!-- "Leave a Review" button -->
             <button class="leave-review-button" onclick="openReviewModal()">Leave a Review</button>
 
             <!-- Review section -->
