--- a/recipe-add.html
+++ b/recipe-add.html
@@ -116,18 +116,52 @@
     </footer>
     <script src="script.js"></script>
     <script>
-        function submitForm() {
-            var form = document.getElementById("recipeForm");
-            var formData = new FormData(form);
+    function submitForm() {
+        // Get form data
+        var recipeName = document.getElementById("recipeName").value;
+        var recipeImage = document.getElementById("recipeImage").files[0];
+        var ingredients = document.getElementById("ingredients").value;
+        var instructions = document.getElementById("instructions").value;
 
-            // Show alert message
-            alert("Thank you for adding your recipe!");
+        // Create FormData object to send file data
+        var formData = new FormData();
+        formData.append("recipeName", recipeName);
+        formData.append("recipeImage", recipeImage);
+        formData.append("ingredients", ingredients);
+        formData.append("instructions", instructions);
 
-            // Redirect to index.html after a short delay (for the alert to be visible)
-            setTimeout(function() {
-                window.location.href = "index.html";
-            }, 1000); // 1000 milliseconds = 1 second
-        }
-    </script>
+        // Send form data to a server (you can use AJAX or fetch to send data to a backend)
+        // Here, we'll simulate sending the data by just updating the JSON file
+        fetch("recipes.json")
+            .then(response => response.json())
+            .then(data => {
+                // Add new recipe to the existing recipes array
+                data.push({
+                    "name": recipeName,
+                    "image": recipeImage.name,
+                    "ingredients": ingredients,
+                    "instructions": instructions
+                });
+
+                // Write updated data back to the JSON file
+                var updatedData = JSON.stringify(data);
+                fetch("recipes.json", {
+                    method: "PUT",
+                    body: updatedData
+                })
+                .then(() => {
+                    // Show success message
+                    alert("Recipe added successfully!");
+                    
+                    // Redirect to index.html after a short delay
+                    setTimeout(function() {
+                        window.location.href = "index.html";
+                    }, 1000);
+                })
+                .catch(error => console.error("Error:", error));
+            })
+            .catch(error => console.error("Error:", error));
+    }
+</script>
 </body>
 </html>
