--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Recipes</a></li>
+                <li><a href="recipe.html">Recipes</a></li>
                 <li><a href="#footer">About Us</a></li>
                 <li><a href="recipe-add.html">Add Your Recipe</a></li> <!-- Added link to recipe-add.html -->
             </ul>
