--- a/login.html
+++ b/login.html
@@ -103,7 +103,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Recipes</a></li>
+                <li><a href="recipe.html">Recipes</a></li>
                 <li><a href="#footer">About Us</a></li>
             </ul>
         </nav>
