--- a/scrambled-eggs-details.html
+++ b/scrambled-eggs-details.html
@@ -144,7 +144,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Recipes</a></li>
+                <li><a href="recipe.html">Recipes</a></li>
                 <li><a href="index.html#footer">About Us</a></li>
             </ul>
         </nav>
