--- a/login.html
+++ b/login.html
@@ -96,15 +96,11 @@
         <div class="logo">
             <span style="font-family: 'Pacifico', cursive; font-size: 36px;">The Campus CookBook</span>
         </div>
-        <div class="search-bar">
-            <input type="text" id="searchInput" placeholder="Search...">
-            <button onclick="searchRecipes()">Search</button>
-        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="recipe.html">Recipes</a></li>
-                <li><a href="#footer">About Us</a></li>
+                <li><a href="index.html#footer">About Us</a></li>
             </ul>
         </nav>
         <div class="hamburger-menu" onclick="toggleMenu()">
@@ -115,6 +111,7 @@
             </div>
         </div>
     </header>
+    
     <div class="overlay"></div>
     <div class="main-container">
         <div class="login-container">
