--- a/scrambled-eggs-details.html
+++ b/scrambled-eggs-details.html
@@ -142,6 +142,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="recipe.html">Recipes</a></li>
                 <li><a href="index.html#footer">About Us</a></li>
+                <li><a href="recipe-add.html">Add Your Recipe</a></li>
             </ul>
         </nav>
         <div class="hamburger-menu" onclick="toggleMenu()">
